2010-01-25  Michiel Roos <michiel@netcreators.com>
	* Fix #13295: Moving of files doesn't work (Thanks to Chris Mueller)

2010-01-12  Michiel Roos <michiel@netcreators.com>
	* Fix #13215: stylesheet.css not loaded in category treeviews (Thanks to Uschi Renziehausen)

2010-01-11  Michiel Roos <michiel@netcreators.com>
	* Fix #13198: Selecting dam items by click on category title causes an SQL-error (Thanks to Uschi Renziehausen)

2010-01-10  Michiel Roos <michiel@netcreators.com>
	* Fix #12918: Respect $TCA['tx_dam_cat']['ctrl']['default_sortby'] = 'mychoice'; everywhere (Thanks to Uschi Renziehausen) 

2010-01-01  Michiel Roos <michiel@netcreators.com>
	* Change: Updated manual
	* Change: DAM requires PHP 5.2 and TYPO3 4.2.10

2009-12-30  Michiel Roos <michiel@netcreators.com>
	* Change on #11700: use t3lib_div::compat_version instead of version_compare

2009-12-30  Michiel Roos <michiel@netcreators.com>
	* Fixed bug #11700: use _GPmerged instead of GParrayMerged (Thanks to Georg Ringer)
	* Fixed bug #12538: Generated contain an invalid relational operator [DBAL] (Thanks to Xavier Perseguers) 
	* Change for #9177: Indexing files is not working in NFS Filesystems (Thanks to Ingo Schmitt, Dan Osipov)

2009-12-29  Michiel Roos <michiel@netcreators.com>
	* Feature: #12408: Integrate flash uploader into DAM (Thanks to Dan Osipov)
	* Fixed bug #9177: Indexing files is not working in NFS Filesystems (Thanks to Ingo Schmitt, Dan Osipov)
	* Fixed bug #12967: Element browser upload page doesn't highlight the actual folder (Thanks to Oliver Krause)

2009-12-22  Michiel Roos <michiel@netcreators.com>
	* Fixed bug #10008: OpenType font not recognized as font (Thanks to Michiel Roos) 

2009-12-21  Michiel Roos <michiel@netcreators.com>
	* Fixed bug #9830: Not responing queries using category selections (Thanks to Peter Kuehn)

2009-12-20  Michiel Roos <michiel@netcreators.com>
	* Fixed #12028: All trees stop working if using TYPO3 4.3. trunk (Thanks to Georg Ringer)
