@@ -38,7 +38,7 @@
             <label index="tx_dam_cmd_filereplace.title">Replace file</label>
             <label index="tx_dam_cmd_filedelete.warning">Warning</label>
             <label index="tx_dam_cmd_filedelete.title">Delete file</label>
-            <label index="tx_dam_cmd_filedelete.message">Are you sure to delete the file(s) and it's meta data?</label>
+            <label index="tx_dam_cmd_filedelete.message">Are you sure you want to delete the file(s) and it's meta data?</label>
             <label index="tx_dam_cmd_filedelete.messageReferencesUsed">File is in use as content!</label>
             <label index="tx_dam_cmd_filedelete.messageReferencesDelete">Deleting the file will remove the media item from the content elements.</label>
             <label index="tx_dam_cmd_filedelete.messageReferences">The file is used in following content elements.</label>
@@ -52,11 +52,11 @@
             <label index="tx_dam_cmd_filenew.text_content">Text content:</label>
             <label index="tx_dam_cmd_filecopy.title">Copy file</label>
             <label index="tx_dam_cmd_filecopy.selectTarget">Select a target folder to copy the files to.</label>
-            <label index="tx_dam_cmd_filecopy.message">Are you sure to copy the file(s) to '%'?</label>
+            <label index="tx_dam_cmd_filecopy.message">Are you sure you want to copy the file(s) to '%s'?</label>
             <label index="tx_dam_cmd_filecopy.submit">Copy file</label>
             <label index="tx_dam_cmd_filemove.title">Move file</label>
             <label index="tx_dam_cmd_filemove.selectTarget">Select a target folder to move the files to.</label>
-            <label index="tx_dam_cmd_filemove.message">Are you sure to move the file(s) to '%s'?</label>
+            <label index="tx_dam_cmd_filemove.message">Are you sure you want to move the file(s) to '%s'?</label>
             <label index="tx_dam_cmd_filemove.submit">Move file</label>
         </languageKey>
         <languageKey index="de" type="array">
